--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.8",
+        "@tailwindcss/forms": "^0.4.0",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^0.19",
         "bootstrap": "^5.3.3",
         "cross-env": "^7.0",
         "jquery": "^3.7.1",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
+        "postcss": "^8.4.6",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.97.1",
         "sass-loader": "^12.0.0",
+        "tailwindcss": "^3.0.18",
         "vue-template-compiler": "^2.7.16",
         "webpack-cli": "^6.0.1"
     }
